; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pgbench/extr_pgbench.c_read_file_contents.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pgbench/extr_pgbench.c_read_file_contents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @read_file_contents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @read_file_contents(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i64, i64* @BUFSIZ, align 8
  store i64 %7, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i64 @pg_malloc(i64 %8)
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** %3, align 8
  br label %11

11:                                               ; preds = %25, %1
  %12 = load i8*, i8** %3, align 8
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds i8, i8* %12, i64 %13
  %15 = load i64, i64* @BUFSIZ, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i64 @fread(i8* %14, i32 1, i64 %15, i32* %16)
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* %5, align 8
  %20 = add i64 %19, %18
  store i64 %20, i64* %5, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @BUFSIZ, align 8
  %23 = icmp ult i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %11
  br label %33

25:                                               ; preds = %11
  %26 = load i64, i64* @BUFSIZ, align 8
  %27 = load i64, i64* %4, align 8
  %28 = add i64 %27, %26
  store i64 %28, i64* %4, align 8
  %29 = load i8*, i8** %3, align 8
  %30 = load i64, i64* %4, align 8
  %31 = call i64 @pg_realloc(i8* %29, i64 %30)
  %32 = inttoptr i64 %31 to i8*
  store i8* %32, i8** %3, align 8
  br label %11

33:                                               ; preds = %24
  %34 = load i8*, i8** %3, align 8
  %35 = load i64, i64* %5, align 8
  %36 = getelementptr inbounds i8, i8* %34, i64 %35
  store i8 0, i8* %36, align 1
  %37 = load i8*, i8** %3, align 8
  ret i8* %37
}

declare dso_local i64 @pg_malloc(i64) #1

declare dso_local i64 @fread(i8*, i32, i64, i32*) #1

declare dso_local i64 @pg_realloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
